# agenda-desafio-rocketseat

./: README.md  pyproject.toml
src/: main.py
src/business/: __init__.py  contact_usecases.py
src/data/: .gitkeep  contacts.json
src/entities/: __init__.py  contact.py
src/entrypoints/: __init__.py  cli.py
src/infrastructure/: __init__.py  repository.py
