[project]
name = "agenda-desafio-rocketseat"
version = "0.1.0"
description = "Projeto de estudos da Rockeseat"
authors = [
    {name = "giovanezanardo0", email = "zanardotech@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2,<2.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
